dkc/y.output

state 0
	$accept: .trans_unit $end 
	opt_label: .    (37)

	kIF  shift 7
	kRETURN  shift 9
	kBREAK  shift 10
	kCONTINUE  shift 11
	kTRUE  shift 29
	kFALSE  shift 30
	kTRY  shift 12
	kTHROW  shift 13
	kBOOLEAN  shift 14
	kINT  shift 15
	kDOUBLE  shift 16
	kSTRING  shift 17
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 19
	-  shift 35
	!  shift 36
	(  shift 25
	.  reduce 37 (src line 205)

	stmt  goto 4
	expr  goto 6
	assign  goto 18
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23
	opt_label  goto 8
	type_spec  goto 5
	trans_unit  goto 1
	def_or_stmt  goto 2
	def_func  goto 3

state 1
	$accept:  trans_unit.$end 
	trans_unit:  trans_unit.def_or_stmt 
	opt_label: .    (37)

	$end  accept
	kIF  shift 7
	kRETURN  shift 9
	kBREAK  shift 10
	kCONTINUE  shift 11
	kTRUE  shift 29
	kFALSE  shift 30
	kTRY  shift 12
	kTHROW  shift 13
	kBOOLEAN  shift 14
	kINT  shift 15
	kDOUBLE  shift 16
	kSTRING  shift 17
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 19
	-  shift 35
	!  shift 36
	(  shift 25
	.  reduce 37 (src line 205)

	stmt  goto 4
	expr  goto 6
	assign  goto 18
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23
	opt_label  goto 8
	type_spec  goto 5
	def_or_stmt  goto 37
	def_func  goto 3

state 2
	trans_unit:  def_or_stmt.    (1)

	.  reduce 1 (src line 72)


state 3
	def_or_stmt:  def_func.    (3)

	.  reduce 3 (src line 75)


state 4
	def_or_stmt:  stmt.    (4)

	.  reduce 4 (src line 76)


state 5
	def_func:  type_spec.tIDENT ( params ) block 
	def_func:  type_spec.tIDENT ( ) block 
	def_func:  type_spec.tIDENT ( params ) ; 
	def_func:  type_spec.tIDENT ( ) ; 
	stmt:  type_spec.tIDENT ; 
	stmt:  type_spec.tIDENT = expr ; 

	tIDENT  shift 38
	.  error


state 6
	stmt:  expr.; 
	expr:  expr., assign 

	;  shift 39
	,  shift 40
	.  error


state 7
	stmt:  kIF.( expr ) block if_tail 

	(  shift 41
	.  error


state 8
	stmt:  opt_label.kWHILE ( expr ) block 
	stmt:  opt_label.kFOR ( opt_expr ; opt_expr ; opt_expr ) block 
	stmt:  opt_label.kFOREACH ( tIDENT : expr ) block 

	kWHILE  shift 42
	kFOR  shift 43
	kFOREACH  shift 44
	.  error


state 9
	stmt:  kRETURN.opt_expr ; 
	opt_expr: .    (39)

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  reduce 39 (src line 211)

	opt_expr  goto 45
	expr  goto 46
	assign  goto 18
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23

state 10
	stmt:  kBREAK.opt_ident ; 
	opt_ident: .    (41)

	tIDENT  shift 49
	.  reduce 41 (src line 217)

	opt_ident  goto 48

state 11
	stmt:  kCONTINUE.opt_ident ; 
	opt_ident: .    (41)

	tIDENT  shift 49
	.  reduce 41 (src line 217)

	opt_ident  goto 50

state 12
	stmt:  kTRY.block kCATCH ( expr ) block 
	stmt:  kTRY.block kFINALLY block 
	stmt:  kTRY.block kCATCH ( expr ) block kFINALLY block 

	{  shift 53
	.  error

	block_beg  goto 52
	block  goto 51

state 13
	stmt:  kTHROW.expr ; 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	expr  goto 54
	assign  goto 18
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23

state 14
	type_spec:  kBOOLEAN.    (5)

	.  reduce 5 (src line 81)


state 15
	type_spec:  kINT.    (6)

	.  reduce 6 (src line 82)


state 16
	type_spec:  kDOUBLE.    (7)

	.  reduce 7 (src line 83)


state 17
	type_spec:  kSTRING.    (8)

	.  reduce 8 (src line 84)


state 18
	expr:  assign.    (43)

	.  reduce 43 (src line 223)


state 19
	opt_label:  tIDENT.: 
	primary:  tIDENT.    (80)

	:  shift 55
	.  reduce 80 (src line 351)


state 20
	assign:  log_or.    (45)
	log_or:  log_or.tLOG_OR log_and 

	tLOG_OR  shift 56
	.  reduce 45 (src line 229)


state 21
	assign:  postfix.= assign 
	assign:  postfix.tADD_A assign 
	assign:  postfix.tSUB_A assign 
	assign:  postfix.tMUL_A assign 
	assign:  postfix.tDIV_A assign 
	assign:  postfix.tMOD_A assign 
	unary:  postfix.    (71)
	postfix:  postfix.( ) 
	postfix:  postfix.( args ) 
	postfix:  postfix.tINC 
	postfix:  postfix.tDEC 

	tADD_A  shift 58
	tSUB_A  shift 59
	tMUL_A  shift 60
	tDIV_A  shift 61
	tMOD_A  shift 62
	tINC  shift 64
	tDEC  shift 65
	=  shift 57
	(  shift 63
	.  reduce 71 (src line 319)


state 22
	log_or:  log_and.    (52)
	log_and:  log_and.tLOG_AND equality 

	tLOG_AND  shift 66
	.  reduce 52 (src line 255)


state 23
	postfix:  primary.    (74)

	.  reduce 74 (src line 329)


state 24
	log_and:  equality.    (54)
	equality:  equality.tEQ relational 
	equality:  equality.tNE relational 

	tEQ  shift 67
	tNE  shift 68
	.  reduce 54 (src line 261)


state 25
	primary:  (.expr ) 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	expr  goto 69
	assign  goto 18
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23

state 26
	primary:  tINT_LITERAL.    (81)

	.  reduce 81 (src line 355)


state 27
	primary:  tDOUBLE_LITERAL.    (82)

	.  reduce 82 (src line 359)


state 28
	primary:  tSTRING_LITERAL.    (83)

	.  reduce 83 (src line 363)


state 29
	primary:  kTRUE.    (84)

	.  reduce 84 (src line 367)


state 30
	primary:  kFALSE.    (85)

	.  reduce 85 (src line 371)


state 31
	equality:  relational.    (56)
	relational:  relational.< additive 
	relational:  relational.> additive 
	relational:  relational.tGE additive 
	relational:  relational.tLE additive 

	tGE  shift 72
	tLE  shift 73
	<  shift 70
	>  shift 71
	.  reduce 56 (src line 267)


state 32
	relational:  additive.    (59)
	additive:  additive.+ multive 
	additive:  additive.- multive 

	+  shift 74
	-  shift 75
	.  reduce 59 (src line 277)


state 33
	additive:  multive.    (64)
	multive:  multive.* unary 
	multive:  multive./ unary 
	multive:  multive.% unary 

	*  shift 76
	/  shift 77
	%  shift 78
	.  reduce 64 (src line 295)


state 34
	multive:  unary.    (67)

	.  reduce 67 (src line 305)


state 35
	unary:  -.unary 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	unary  goto 79
	postfix  goto 80
	primary  goto 23

state 36
	unary:  !.unary 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	unary  goto 81
	postfix  goto 80
	primary  goto 23

state 37
	trans_unit:  trans_unit def_or_stmt.    (2)

	.  reduce 2 (src line 73)


state 38
	def_func:  type_spec tIDENT.( params ) block 
	def_func:  type_spec tIDENT.( ) block 
	def_func:  type_spec tIDENT.( params ) ; 
	def_func:  type_spec tIDENT.( ) ; 
	stmt:  type_spec tIDENT.; 
	stmt:  type_spec tIDENT.= expr ; 

	;  shift 83
	=  shift 84
	(  shift 82
	.  error


state 39
	stmt:  expr ;.    (20)

	.  reduce 20 (src line 135)


state 40
	expr:  expr ,.assign 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	assign  goto 85
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23

state 41
	stmt:  kIF (.expr ) block if_tail 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	expr  goto 86
	assign  goto 18
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23

state 42
	stmt:  opt_label kWHILE.( expr ) block 

	(  shift 87
	.  error


state 43
	stmt:  opt_label kFOR.( opt_expr ; opt_expr ; opt_expr ) block 

	(  shift 88
	.  error


state 44
	stmt:  opt_label kFOREACH.( tIDENT : expr ) block 

	(  shift 89
	.  error


state 45
	stmt:  kRETURN opt_expr.; 

	;  shift 90
	.  error


state 46
	opt_expr:  expr.    (40)
	expr:  expr., assign 

	,  shift 40
	.  reduce 40 (src line 215)


state 47
	primary:  tIDENT.    (80)

	.  reduce 80 (src line 351)


state 48
	stmt:  kBREAK opt_ident.; 

	;  shift 91
	.  error


state 49
	opt_ident:  tIDENT.    (42)

	.  reduce 42 (src line 221)


state 50
	stmt:  kCONTINUE opt_ident.; 

	;  shift 92
	.  error


state 51
	stmt:  kTRY block.kCATCH ( expr ) block 
	stmt:  kTRY block.kFINALLY block 
	stmt:  kTRY block.kCATCH ( expr ) block kFINALLY block 

	kCATCH  shift 93
	kFINALLY  shift 94
	.  error


state 52
	block:  block_beg.} 
	block:  block_beg.stmts } 
	opt_label: .    (37)

	kIF  shift 7
	kRETURN  shift 9
	kBREAK  shift 10
	kCONTINUE  shift 11
	kTRUE  shift 29
	kFALSE  shift 30
	kTRY  shift 12
	kTHROW  shift 13
	kBOOLEAN  shift 14
	kINT  shift 15
	kDOUBLE  shift 16
	kSTRING  shift 17
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 19
	-  shift 35
	!  shift 36
	(  shift 25
	}  shift 95
	.  reduce 37 (src line 205)

	stmt  goto 97
	expr  goto 6
	assign  goto 18
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23
	stmts  goto 96
	opt_label  goto 8
	type_spec  goto 98

state 53
	block_beg:  {.    (15)

	.  reduce 15 (src line 112)


state 54
	stmt:  kTHROW expr.; 
	expr:  expr., assign 

	;  shift 99
	,  shift 40
	.  error


state 55
	opt_label:  tIDENT :.    (38)

	.  reduce 38 (src line 209)


state 56
	log_or:  log_or tLOG_OR.log_and 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	log_and  goto 100
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 80
	primary  goto 23

state 57
	assign:  postfix =.assign 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	assign  goto 101
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23

state 58
	assign:  postfix tADD_A.assign 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	assign  goto 102
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23

state 59
	assign:  postfix tSUB_A.assign 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	assign  goto 103
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23

state 60
	assign:  postfix tMUL_A.assign 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	assign  goto 104
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23

state 61
	assign:  postfix tDIV_A.assign 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	assign  goto 105
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23

state 62
	assign:  postfix tMOD_A.assign 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	assign  goto 106
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23

state 63
	postfix:  postfix (.) 
	postfix:  postfix (.args ) 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	)  shift 107
	.  error

	assign  goto 109
	log_or  goto 20
	log_and  goto 22
	equality  goto 24
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 21
	primary  goto 23
	args  goto 108

state 64
	postfix:  postfix tINC.    (77)

	.  reduce 77 (src line 338)


state 65
	postfix:  postfix tDEC.    (78)

	.  reduce 78 (src line 342)


state 66
	log_and:  log_and tLOG_AND.equality 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	equality  goto 110
	relational  goto 31
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 80
	primary  goto 23

state 67
	equality:  equality tEQ.relational 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	relational  goto 111
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 80
	primary  goto 23

state 68
	equality:  equality tNE.relational 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	relational  goto 112
	additive  goto 32
	multive  goto 33
	unary  goto 34
	postfix  goto 80
	primary  goto 23

state 69
	expr:  expr., assign 
	primary:  ( expr.) 

	,  shift 40
	)  shift 113
	.  error


state 70
	relational:  relational <.additive 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	additive  goto 114
	multive  goto 33
	unary  goto 34
	postfix  goto 80
	primary  goto 23

state 71
	relational:  relational >.additive 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	additive  goto 115
	multive  goto 33
	unary  goto 34
	postfix  goto 80
	primary  goto 23

state 72
	relational:  relational tGE.additive 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	additive  goto 116
	multive  goto 33
	unary  goto 34
	postfix  goto 80
	primary  goto 23

state 73
	relational:  relational tLE.additive 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	additive  goto 117
	multive  goto 33
	unary  goto 34
	postfix  goto 80
	primary  goto 23

state 74
	additive:  additive +.multive 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	multive  goto 118
	unary  goto 34
	postfix  goto 80
	primary  goto 23

state 75
	additive:  additive -.multive 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	multive  goto 119
	unary  goto 34
	postfix  goto 80
	primary  goto 23

state 76
	multive:  multive *.unary 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	unary  goto 120
	postfix  goto 80
	primary  goto 23

state 77
	multive:  multive /.unary 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	unary  goto 121
	postfix  goto 80
	primary  goto 23

state 78
	multive:  multive %.unary 

	kTRUE  shift 29
	kFALSE  shift 30
	tINT_LITERAL  shift 26
	tDOUBLE_LITERAL  shift 27
	tSTRING_LITERAL  shift 28
	tIDENT  shift 47
	-  shift 35
	!  shift 36
	(  shift 25
	.  error

	unary  goto 122
	postfix  goto 80
	primary  goto 23

state 79
	unary:  - unary.    (72)

	.  reduce 72 (src line 320)


state 80
	unary:  postfix.    (71)
	postfix:  postfix.( ) 
	postfix:  postfix.( args ) 
	postfix:  postfix.tINC 
	postfix:  postfix.tDEC 

	tINC  shift 64
	tDEC  shift 65
	(  shift 63
	.  reduce 71 (src line 319)


state 81
	unary:  ! unary.    (73)

	.  reduce 73 (src line 324)

